# BSU

./: README.md
C#/anagrams/Anagrams/: Anagram.cs
C#/binary-search/BinarySearch/: ArrayExtension.cs
C#/bit-operations/BitOperations/: NumbersExtension.cs
C#/bools/Bools/: LogicalPuzzles.cs
C#/exceptions/Exceptions/: ThrowingArgumentOutOfRange.cs
C#/filter-by-digits/FilterByDigits/: ArrayExtension.cs
C#/filter-by-digits/FilterByDigits.Tests/: ArrayExtensionTests.cs  FilterByDigits.Tests.csproj
Colloquium 1/AbstractFactory/: pom.xml
Colloquium 1/Factorial/: pom.xml
Colloquium 2/FactorialCalculator/: pom.xml
Colloquium 2/LinkedList/: pom.xml
Colloquiums/Colloquium 2/RemoveDuplicates/: pom.xml
Java Core/Course Work/: README.md  pom.xml
Java Core/Course Work/io/: json_output.json  txt_input.txt  txt_output.txt  xml_output.xml  zip_enc_json_input.json
Java Core/Exam Question/: Ticket 13.docx  Ticket 13.odt  Ticket 13.rtf
Java Core/Final Assignment/: Game.txt  GameEN.txt  Groups.txt  GroupsEN.txt  GroupsOut.txt  Results.txt
Java Core/Java Basic Tasks/: README.md
Operating Systems/: README.md
Operating Systems/LabWork2/: LW2_task.txt
Operating Systems/LabWork3/: CMakeLists.txt  LW3_task.txt  Main.cpp  Main_boost.cpp  boost_vs_std.txt
Operating Systems/LabWork4/: CMakeLists.txt  LW4.cpp  LW4_task.txt  README.md
Operating Systems/LabWork4/Unit Tests/: MainTests.cpp
Operating Systems/LabWork5/: Client.cpp  README.md  Server.cpp  employee.h  message.h
week_01_ml_intro/Homework/: hw_1_game_of_thrones.ipynb
(+65 files in other folders)
